--- a/src/components/Sidebar/style.scss
+++ b/src/components/Sidebar/style.scss
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   position: relative;
   width: 100%;
   max-width: 768px;
@@ -21,7 +21,7 @@
 .sidebar {
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   background-color: white;
   width: 75%;
   padding-top: 100px;
@@ -30,7 +30,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: start;
+    align-items: flex-start;
     gap: 10px;
     width: 100%;
     border-bottom: 1px solid #e9e9e9;
@@ -60,7 +60,7 @@
     margin-top: 50px;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     gap: 25px;
     a {
       text-decoration: none;
