--- a/src/components/Sidebar/style.scss
+++ b/src/components/Sidebar/style.scss
@@ -22,7 +22,8 @@
   flex-direction: column;
   justify-content: flex-start;
   background-color: white;
-  width: 300px;
+  width: 80%;
+  max-width: 600px;
   padding-top: 100px;
   padding-left: 50px;
   &__header {
@@ -81,7 +82,7 @@
 .content {
   background-color: rgba($color: #000000, $alpha: 0.5);
   height: 100vh;
-  width: 25%;
+  width: 20%;
   &.collapsed {
     width: 0;
     background-color: white;
